# hok_env

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Changelog  GAMECORE.LICENSE  README.md  build.sh  dockerfile.base  dockerfile.cpu  dockerfile.dev  start_dev.sh  stop_dev.sh
.github/workflows/: base.yml  base_py37.yaml  base_py38.yml  cpu.yaml  docker-image.yml  gpu.yml  python-publish.yml
aiarena/battle/: battle.py  start_battle.sh
dockerfile/: dockerfile.base  dockerfile.base.cpu  dockerfile.base.gpu  dockerfile.base.torch  dockerfile.dev  dockerfile.dev.3v3  dockerfile.gamecore  dockerfile.kaiwu
docs/: cluster.md  run_windows_gamecore_on_linux.md  run_with_prebuilt_image.md
hok_env/: MANIFEST.in  env.yaml  pyproject.toml  setup.py
hok_env/hok/: __init__.py  agent.py  battle.py  camp.py  env1v1.py  env1v1_data.py  game_render.py  gamecore_utils.py  server.py  server_delay.py
hok_env/hok/common/: camp.py  gamecore_client.py  log.py  server_process.py
hok_env/hok/hok1v1/: __init__.py  battle.py  camp.py  config.json  default_hero_config.json  env1v1.py  hero_config.py  server.py  server_delay.py  version.py
hok_env/hok/hok1v1/unit_test/: config.json  test_env.py
hok_env/hok/hok3v3/: __init__.py  action_space.py  action_space_test.py  agent.py  battle.py  camp.py  default_hero_config.json  env.py  gamecore_client.py  hero_config.py  reward.py  server.py
hok_env/hok/hok3v3/unit_test/: test_env.py
hok_env/hok/remote_gamecore/: check.sh  get_path.sh  list.sh  remote_launcher.py  start.sh  stop.sh
hok_env/hok/unit_test/: test_env.py
(+247 files in other folders)
